--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,28 @@
-/* Add your styles here. */
+body{
+    background-color: rgb(213, 233, 229);
+    line-height: 1.5;   
+}
+.main-page-heading{
+    color: rgb(13, 45, 99);
+    text-align:center;
+    font-family: verdana ;
+    font-size : 50px;
+    font-weight: bolder;
+}
+.paragraph-text{
+    color: black;
+    font-size: medium;
+    font-family: Helvetica;
+    
+
+}
+.subtitle{
+    color: rgb(158, 105, 86);
+    font-weight: 100;
+    font-family: serief;
+    font-weight: 700;
+    font-style: oblique;
+    font-stretch: extra-expanded;
+
+
+}
